--- a/css/login.css
+++ b/css/login.css
@@ -82,7 +82,7 @@ nav ul li a{
     position:absolute;
     width: 110px;
     height:100%;
-    background:linear-gradient(to right, #03a9fa,#ff0058);
+    background: radial-gradient(circle, #d5aeff, #c793ff, #b877ff, #a85aff, #9737ff);
     border-radius:30px;
     transition: .5s;
 }
