--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+body{
+    height:100vh;
+    background-image: linear-gradient(to bottom, #9594dd, #9695e1, #9695e4, #9796e8, #9896eb, #a695ea, #b495e8, #c094e5, #d793db, #e993cf, #f695c2, #ff99b6);
+}
 .container{
     height:100 vh;
     width:100%;
@@ -82,4 +86,13 @@ nav ul li:hover .drop-down1 ul li:last-child{
 
 nav ul li:hover .drop-down1 ul li a:hover{
     color:rgb(211, 210, 245);
+}
+
+#text{
+    color:white;
+    text-align: center;
+    font-size:40px;
+    margin-top:200px;
+    text-transform:uppercase;
+    font-family:"Montserrat";
 }
