--- a/css/algebra.css
+++ b/css/algebra.css
@@ -21,20 +21,22 @@
     transform: scale(1.1);
 }
 
+body{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-image: linear-gradient(to bottom, #9594dd, #9695e1, #9695e4, #9796e8, #9896eb, #a695ea, #b495e8, #c094e5, #d793db, #e993cf, #f695c2, #ff99b6);
+}
+
 .container{
     display:block;
     height:78px;
-    background-color: rgb(149, 148, 221);
-}
-
-.container a{
-    width: 40px;
-    height: 40px;
 }
 
 .containerTitles{
     display:inline-block;
     padding-left: 30px;
+    color: white;
 }
 
 .containerTitles h1{
@@ -48,18 +50,26 @@
 }
 
 .card{
-    width: 90vw;
-    height: 80vh;
+    width: 80vw;
+    height: 50vh;
     margin: 0 auto;
     margin-top: 30px;
-    border: dashed rgb(149, 148, 221) 5px;
+    border: double black 5px;
+    background-color: white;
+    
 }
 
 .column{
     float: left;
-    width: 50%;
+    width: 48%;
     height: 100%;
-    
+}
+
+.middle{
+    float:left;
+    height: 49vh;
+    width:2%;
+    border-left:solid black 3px;
 }
 
 .row:after{
@@ -68,20 +78,26 @@
     clear: both;
 }
 
-.column h2{
+.row h2{
     text-align: center;
 }
 
-.column a:link, a:visited{
-    color: rgb(149, 148, 221);
+.row a:link, a:visited p{
+    color:rgb(149, 148, 221);
+    text-decoration: none;
+}
+
+.column p{
+    color: black;
     text-align: center;
-    text-decoration:none;
-    display: block;
+    padding-top: 10px;
+    font-size: 18px;
 }
 
 .bodyTitles h1{
     text-align: center;
     text-decoration: underline;
-    font-size:26px;
+    color: white;
+    font-size:32px;
     margin-top: 20px;
 }
