--- a/css/trigonometry.css
+++ b/css/trigonometry.css
@@ -21,10 +21,21 @@
     transform: scale(1.1);
 }
 
+body{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-image: linear-gradient(to bottom, #9594dd, #9695e1, #9695e4, #9796e8, #9896eb, #a695ea, #b495e8, #c094e5, #d793db, #e993cf, #f695c2, #ff99b6);
+}
+
 .container{
     display:block;
     height:78px;
-    background-color: rgb(149, 148, 221);
+}
+
+.container a{
+    width: 40px;
+    height: 40px;
 }
 
 .containerTitles{
@@ -33,7 +44,7 @@
 }
 
 .containerTitles h1{
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .containerTitles p{
@@ -47,7 +58,8 @@
     height: 80vh;
     margin: 0 auto;
     margin-top: 30px;
-    border: dashed rgb(149, 148, 221) 5px;
+    border: double black 5px;
+    background-color: white;
 }
 
 .column{
@@ -67,8 +79,19 @@
     text-align: center;
 }
 
+.column a:link, a:visited p{
+    color:rgb(149, 148, 221);
+    text-decoration: none;
+}
+
+.column p{
+    color: black;
+    text-align: center;
+}
+
 .bodyTitles h1{
     text-align: center;
     text-decoration: underline;
+    font-size:26px;
     margin-top: 20px;
 }
