--- a/css/quiz.css
+++ b/css/quiz.css
@@ -44,7 +44,7 @@ body{
     transition: all .3s ease-in-out;
 }
 
-.megaLogo{
+#slideLogo{
     margin-left: 0;
     margin-top: 0;
     display: inline-flex;
@@ -61,6 +61,11 @@ body{
     margin:auto;
 
     animation: logoBreath 4s infinite;
+
+}
+
+.megaLogo.click{
+    bottom: 90%;
 }
 
 @keyframes logoBreath{
