--- a/css/canvas.css
+++ b/css/canvas.css
@@ -1,23 +1,134 @@
-.canvas{
-    display: block;
-    position: absolute;
-    height: 75%;
-    width: 75%;
-    background-color: white;
-    
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+p {
+  font-family: "Noto Sans", sans-serif;
+}
 
-    margin: auto;
-    
-    z-index: -1;
+.canvas {
+  display: block;
+  position: absolute;
+  height: 75%;
+  width: 75%;
+  background-color: rgb(255, 255, 255);
 
-    border-radius: 10px;
-    
-    opacity: 0;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 
-    transition: 1s ease;
+  margin: auto;
 
+  z-index: -1;
+
+  border-radius: 10px;
+
+  
+  visibility: hidden;
+
+  border-color: rgb(200, 200, 200);
+  border-style: solid;
+  border-width: 5px;
+
+  font-family: "Noto Sans", sans-serif;
+}
+
+
+
+#middleLine {
+  position: absolute;
+  left: 50%;
+  height: 100%;
+  width: 5px;
+  background-color: rgb(200, 200, 200);
+}
+
+#bottomBar {
+  position: absolute;
+  top: 96%;
+  width: 50%;
+  height: 4%;
+  background-color: rgb(200, 200, 200);
+}
+
+#leftBottomText {
+  display: inline;
+  height: 100%;
+}
+
+#rightBottomText {
+  float: right;
+}
+
+#topBar {
+  display: flex;
+  position: absolute;
+  width: 100%;
+  height: 10%;
+  background-color: rgb(200, 200, 200);
+}
+
+#leftTopText {
+  display: flex;
+  height: 100%;
+  font-size: 40px;
+}
+
+.star-wrapper {
+  top: 50%;
+  right: -5%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  direction: rtl;
+}
+.star-wrapper a {
+  font-size: 2em;
+  color: #fff;
+  text-decoration: none;
+  transition: all 0.2s;
+  margin: 0px;
+}
+.star-wrapper a:hover {
+  color: gold;
+  transform: scale(1.2);
+}
+.s1:hover ~ a {
+  color: gold;
+}
+.s2:hover ~ a {
+  color: gold;
+}
+.s3:hover ~ a {
+  color: gold;
+}
+.s4:hover ~ a {
+  color: gold;
+}
+.s5:hover ~ a {
+  color: gold;
+}
+.wraper {
+  position: absolute;
+  bottom: 30px;
+  right: 50px;
+}
+
+.tooltipRating {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.tooltipRating .tooltiptextRating {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltipRating:hover .tooltiptextRating {
+  visibility: visible;
 }
