--- a/css/about.css
+++ b/css/about.css
@@ -2,13 +2,58 @@
     margin:0;
     padding:0;
     font-family: Century Gothic;
-    box-sizing: border-box;
 }
 
 body{
     height:100vh;
-    background-image: linear-gradient(to bottom, #4b49b3, #9695e1, #9695e4, #9796e8, #9896eb, #a695ea, #b495e8, #c094e5, #d793db, #e993cf, #f695c2, #ff99b6);
+    background-image: linear-gradient(to bottom, #9594dd, #9695e1, #9695e4, #9796e8, #9896eb, #a695ea, #b495e8, #c094e5, #d793db, #e993cf, #f695c2, #ff99b6);
 }
+.container2{
+
+    margin:20px 40px;
+    color: white;
+}
+.heading{
+    font-size:60px;
+    color:white;
+}
+
+.heading span{
+    font-style:italic;
+    font-size:30px;
+}
+
+.profiles{
+    display:flex;
+    justify-content:space-around;
+    margin:20px 70px;
+}
+
+.profile{
+    flex-basis:220px;
+}
+
+.profile .profile-image{
+    height:220px;
+    width: 220px;
+    border-radius: 50%;
+    filter:grayscale(100%);
+    cursor:pointer;
+    transition:400ms;
+}
+.profile:hover .profile-image{
+    filter:grayscale(0);
+}
+
+.user-name{
+    margin-top:30px;
+    font-size:20px;
+    text-align: center;
+}
+p{
+    font-size: 25px;
+}
+
 .container{
     height:100 vh;
     width:100%;
@@ -64,6 +109,7 @@ nav ul li:hover .drop-down1{
     background-color:rgb(149, 148, 221);
     margin-top:15px;
     margin-left:-15px;
+    
 }
 
 nav ul li:hover .drop-down1 ul{
@@ -81,37 +127,9 @@ nav ul li:hover .drop-down1 ul li{
 
 nav ul li:hover .drop-down1 ul li:last-child{
     border-bottom:none;
+    overflow:hidden;
 }
 
 nav ul li:hover .drop-down1 ul li a:hover{
     color:rgb(211, 210, 245);
-}
-
-#text{
-    color:white;
-    text-align: center;
-    font-size:25px;
-    margin-top:200px;
-    text-transform:uppercase;
-    font-family:"Montserrat";
-}
-
-section{
-    display:flex;
-}
-
-.leftside{
-    width:45%;
-    height:auto;
-    overflow: hidden;
-    margin-top:20px;
-}
-
-.leftside img{
-    width:500px;
-    height:400px;
-}
-.rightside{
-    width:55%;
-    height:300px;
 }
