--- a/css/algebra.css
+++ b/css/algebra.css
@@ -4,16 +4,16 @@
     margin:0;
     padding:0;
     font-family: 'Roboto Slab', serif;
-    box-sizing: border-box;
 }
 
 .home{
-    margin-left: 15px;
     margin-top: 15px;
-    width:40px;
-    height:40px;
+    width:50px;
+    height:50px;
     filter:grayscale(100%);
     transition:0.3s ease;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .home:hover{
@@ -31,23 +31,10 @@ body{
 .container{
     display:block;
     height:78px;
+    text-align: center;
 }
 
-.containerTitles{
-    display:inline-block;
-    padding-left: 30px;
-    color: white;
-}
-
-.containerTitles h1{
-    font-size: 16px;
-}
-
-.containerTitles p{
-    font-size: 12px;
-    opacity: 0.5;
-    padding-left: 20px;
-}
+/*  content  */
 
 .card{
     width: 80vw;
@@ -56,7 +43,6 @@ body{
     margin-top: 30px;
     border: double black 5px;
     background-color: white;
-    
 }
 
 .column{
@@ -78,7 +64,8 @@ body{
     clear: both;
 }
 
-.row h2{
+h2{
+    margin-bottom: 20px;
     text-align: center;
 }
 
@@ -89,15 +76,59 @@ body{
 
 .column p{
     color: black;
+    margin-top: 20px;
     text-align: center;
     padding-top: 10px;
     font-size: 18px;
 }
 
-.bodyTitles h1{
+h1{
     text-align: center;
     text-decoration: underline;
     color: white;
     font-size:32px;
     margin-top: 20px;
+}
+
+/*  responsiveness part  */
+
+@media only screen and (max-width: 425px) {
+    .row .column{
+        width: 100%;
+        height: 50%;
+        border: double black 5px;
+        background-color: white;
+    
+    }
+
+    .card{
+        border: none;
+        background-color: transparent;
+        height: 10vh;
+    }
+
+    .row{
+        padding: 0;
+        margin: 0;
+    }
+    
+    #column2{
+        margin-top: -400px;
+    }
+
+
+    .middle{
+        visibility: hidden;
+    }
+
+    .column p{
+        font-size: 12px;
+    }
+
+    .home{
+        margin-left:15px;
+        margin-right:15px;
+        width: 40px;
+        height: 40px
+    }
 }
