--- a/css/contact.css
+++ b/css/contact.css
@@ -18,8 +18,8 @@ body{
 .home{
     margin-left: 15px;
     margin-top: 15px;
-    width:40px;
-    height:40px;
+    width:50px;
+    height:50px;
     filter:grayscale(100%);
     transition:0.3s ease;
 }
@@ -37,6 +37,7 @@ body{
 .containerTitles{
     display:inline-block;
     padding-left: 30px;
+    color: white;
 }
 
 .containerTitles h1{
@@ -51,9 +52,10 @@ body{
 
 
 /*  form  */
+
 .formular{
-    height: 40vh;
-    width: 40vw;
+    height: 45vh;
+    width: 60vw;
     margin: 0 auto;
     margin-top: 30px;
     border: double whitesmoke 5px;
@@ -61,8 +63,12 @@ body{
 
 .column{
     float: left;
-    width: 50%;
+    margin-top:2%;
+    width: 33.3%;
     height: 100%;
+    text-align: center;
+    font-size:20px;
+    color:white;
 }
 
 .row:after{
@@ -71,9 +77,115 @@ body{
     clear: both;
 }
 
-.column{
-    margin-top: 10px;
+.column input{
+    width:76.6%;
+    font-size: 20px;
+    background: transparent;
+    outline: none;
+    border: none;
+    color: white;
+}
+
+.column .fname{
+    border-bottom: 2px solid white;
+}
+
+.column .lname{
+    border-bottom: 2px solid white;
+}
+
+.column .email{
+    border-bottom: 2px solid white;
+}
+
+.feedback{
+    margin: 4%;
+    text-align: center;
+    font-size: 20px;
+    color: white;
+}
+
+.feedback textarea{
+    text-align: left;
+    font-size: 18px;
+    resize:none;
+    margin-top:1%;
+    width:100%;
+    height:10vh;
+    background: transparent;
+    outline: none;
+    border: 4px dotted white;
+    color: white;
+}
+
+.feedbackText{
+    border-bottom: 2px solid white;
+}
+
+.submit{
+    text-align: center;
+}
+
+.button{
+    background:transparent;
+    border: none;
+    color:white;
+    font-size:22px;
+    transition: 0.3s ease;
+}
+
+.button:hover{
+    background:transparent;
+    border: solid white 2px;
+    color:white;
+    transform: scale(1.1);
+}
+
+
+/*  bottom part  */
+
+.bottom{
+    margin: 5%;
+}
+
+.bottomColumn{
+    float: left;
+    margin-top:2%;
+    width: 33.3%;
+    height: 100%;
     text-align: center;
     font-size:20px;
     color:white;
+}
+
+.bottomRow:after{
+    content:"";
+    display: table;
+    clear: both;
+}
+
+.profile{
+    width: 100px;
+    border-radius: 50%;
+    border: solid white 3px;
+}
+
+.bottom a:link, a:visited{
+    color:white;
+    text-decoration: underline;
+}
+
+/* responsiveness part */
+
+@media only screen and (max-width: 768px) {
+    .column{
+        width: 100%;
+        height: 33.3%;
+    }
+
+    .bottomColumn{
+        width: 100%;
+        height: 33.3%;
+    }
+
 }
