--- a/css/about.css
+++ b/css/about.css
@@ -1,7 +1,7 @@
 *{
     margin:0;
     padding:0;
-    font-family: Century Gothic;
+    font-family: "Century Gothic";
 }
 
 body{
@@ -9,8 +9,7 @@ body{
     background-image: linear-gradient(to bottom, #9594dd, #9695e1, #9695e4, #9796e8, #9896eb, #a695ea, #b495e8, #c094e5, #d793db, #e993cf, #f695c2, #ff99b6);
 }
 .container2{
-
-    margin:20px 40px;
+    margin:100px 40px;
     color: white;
 }
 .heading{
@@ -55,7 +54,7 @@ p{
 }
 
 .container{
-    height:100 vh;
+    height:100vh;
     width:100%;
     background-position: center;
     background-size:cover;
@@ -132,4 +131,11 @@ nav ul li:hover .drop-down1 ul li:last-child{
 
 nav ul li:hover .drop-down1 ul li a:hover{
     color:rgb(211, 210, 245);
+}
+
+.description{
+    margin-top: 50px;
+    text-align: center;
+    margin-left: 10%;
+    margin-right: 10%;
 }
