--- a/css/contact.css
+++ b/css/contact.css
@@ -18,8 +18,8 @@ body{
 .home{
     margin-left: 15px;
     margin-top: 15px;
-    width:50px;
-    height:50px;
+    width:60px;
+    height:60px;
     filter:grayscale(100%);
     transition:0.3s ease;
 }
@@ -38,9 +38,10 @@ body{
     display:inline-block;
     padding-left: 30px;
     color: white;
+    text-align: center;
 }
 
-.containerTitles h1{
+h1{
     font-size: 16px;
 }
 
