--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 *{
     margin:0;
     padding:0;
-    font-family: Century Gothic;
+    font-family: "Century Gothic";
     box-sizing: border-box;
 }
 
@@ -10,7 +10,7 @@ body{
     background-image: linear-gradient(to bottom, #4b49b3, #9695e1, #9695e4, #9796e8, #9896eb, #a695ea, #b495e8, #c094e5, #d793db, #e993cf, #f695c2, #ff99b6);
 }
 .container{
-    height:100 vh;
+    height:100vh;
     width:100%;
     background-position: center;
     background-size:cover;
