--- a/css/about.css
+++ b/css/about.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    height:100vh;
+    height: 100vh;
     background-image: linear-gradient(to bottom, #9594dd, #9695e1, #9695e4, #9796e8, #9896eb, #a695ea, #b495e8, #c094e5, #d793db, #e993cf, #f695c2, #ff99b6);
 }
 .container2{
@@ -56,7 +56,7 @@ p{
 
 
 .container{
-    height:100vh;
+    z-index: 1;
     width:100%;
     background-position: center;
     background-size:cover;
