--- a/css/profile.css
+++ b/css/profile.css
@@ -76,7 +76,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    align-content:space-between;
+    align-content:space-between; 
     flex-wrap: wrap;
 }
 
@@ -95,17 +95,32 @@ body{
     margin: 1px solid #2d2d2d;
 }
 
+.eq{
+    height: 100px;
+    width: 100px;
+    font-size: 1.5em;
+}
+
+.MathJax_Display{
+    font-size: 1.5em;
+    height: 100%;
+}
+
+.MathJax{
+    font-size: 1.5em;
+    height: 100%;
+}
+
 .statText{
     display: flex;
     position: relative;
     /* background: rgb(240, 119, 7); */
     font-family: 'Noto Sans', sans-serif;
     font-size: 25px;
-    font-weight: lighter;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 10%;
+    margin-bottom: 10%;
 }
 
 .statistics{
